added Styles to the app

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  /* margin: 0 auto; */
+  justify-content: center;
+  height: 100vh;
 }
